<resources>
    <string name="item_job_pruning">Pruning</string>
    <string name="item_job_thining">Thining</string>
    <string name="item_assignment_orchard">Orchard</string>
    <string name="item_assignment_rate">Rate</string>
    <string name="item_assignment_row">Trees for row %1$d</string>
    <string name="item_assignment_row_previous_worker">%1$s (%2$d)</string>
    <string name="assignment_detail_block">Block</string>
    <string name="assignment_detail_rate_type">Rate type</string>
    <string name="assignment_detail_piece_rate">Piece rate</string>
    <string name="assignment_detail_wages">Wages</string>
    <string name="assignment_detail_apply_to_all">Apply to all</string>
    <string name="item_assignment_detail_wages_message">%1$s will be paid by wages in this timesheet.</string>
    <string name="all_confirm">Confirm</string>
    <string name="job_header_add_max_trees">Add max trees</string>
</resources>