<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="assignmentUi"
            type="com.linh.androiddeveloperchallenge.ratesvolume.presentation.model.TimesheetUi.SuccessUi.JobUi.AssignmentUi" />

        <variable
            name="onClickPieceRate"
            type="android.view.View.OnClickListener" />

        <variable
            name="onClickWages"
            type="android.view.View.OnClickListener" />

        <variable
            name="onRateChange"
            type="androidx.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_layout_staff_info_avatar"
            android:layout_width="@dimen/size_staff_info_avatar"
            android:layout_height="@dimen/size_staff_info_avatar"
            android:background="@drawable/background_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/frame_layout_staff_info_avatar_initials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{assignmentUi.staffUi.initials}"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="@android:color/white"
                tools:text="B" />

        </FrameLayout>

        <TextView
            android:id="@+id/text_staff_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@{assignmentUi.staffUi.fullName}"
            android:textAppearance="?textAppearanceBody1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/frame_layout_staff_info_avatar"
            app:layout_constraintStart_toEndOf="@+id/frame_layout_staff_info_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Barco" />

        <TextView
            android:id="@+id/text_assignment_orchard_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_assignment_orchard_label"
            android:text="@string/item_assignment_orchard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_layout_staff_info_avatar" />

        <TextView
            android:id="@+id/text_assignment_orchard_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_item_assignment_orchard_info"
            android:text="@{assignmentUi.orchardName}"
            android:textAppearance="?textAppearanceBody2"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_assignment_orchard_label"
            app:layout_constraintStart_toEndOf="@+id/text_assignment_orchard_label"
            tools:text="Benji (V1394U)" />

        <TextView
            android:id="@+id/text_assignment_block_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_assignment_orchard_label"
            android:text="@string/assignment_detail_block"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_assignment_orchard_label" />

        <TextView
            android:id="@+id/text_assignment_block_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_item_assignment_orchard_info"
            android:text="@{assignmentUi.blockName}"
            android:textAppearance="?textAppearanceBody2"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_assignment_block_label"
            app:layout_constraintStart_toEndOf="@+id/text_assignment_block_label"
            tools:text="UB13" />

        <TextView
            android:id="@+id/text_assignment_rate_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_item_assignment_rate_type_label"
            android:text="@string/assignment_detail_rate_type"
            android:textAppearance="?textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="@+id/text_assignment_block_label"
            app:layout_constraintTop_toBottomOf="@+id/text_assignment_block_label" />

        <Button
            android:id="@+id/button_assignment_piece_rate"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_item_assignment_rate_button"
            android:layout_marginTop="@dimen/margin_top_item_assignment_rate_button"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/assignment_detail_piece_rate"
            android:onClick="@{onClickPieceRate}"
            isActive="@{assignmentUi.isRateTypePieceRateSelected}"
            app:layout_constraintEnd_toStartOf="@+id/button_assignment_wages"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/text_assignment_rate_type"
            app:layout_constraintTop_toBottomOf="@id/text_assignment_rate_type" />

        <Button
            android:id="@+id/button_assignment_wages"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_item_assignment_rate_button"
            android:layout_marginStart="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            isActive="@{assignmentUi.isRateTypeWagesSelected}"
            android:onClick="@{onClickWages}"
            android:text="@string/assignment_detail_wages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_assignment_piece_rate"
            app:layout_constraintTop_toTopOf="@+id/button_assignment_piece_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_assignment_rate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_assignment_orchard_label"
            android:layout_marginEnd="@dimen/margin_end_item_assignment_rate_text_input"
            android:hint="@string/item_assignment_rate"
            isVisible="@{assignmentUi.isRateTypePieceRateSelected}"
            app:layout_constraintEnd_toStartOf="@+id/button_assignment_rate_apply_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_assignment_piece_rate"
            app:prefixText="$"
            app:suffixText="/hour">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_assignment_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{assignmentUi.pieceRate}"
                android:onTextChanged="@{onRateChange}"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_assignment_rate_apply_all"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment_detail_apply_to_all"
            isVisible="@{assignmentUi.isRateTypePieceRateSelected}"
            app:layout_constraintBottom_toBottomOf="@id/text_input_layout_assignment_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_input_layout_assignment_rate" />

        <TextView
            android:id="@+id/text_assignment_wages_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            isVisible="@{assignmentUi.isRateTypeWagesSelected}"
            android:text="Canker Removal will be paid by wages in this timesheet."
            app:layout_constraintTop_toBottomOf="@id/button_assignment_piece_rate"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_assignment_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_assignment_wages_message, button_assignment_rate_apply_all, text_input_layout_assignment_rate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>